added, rndis, added, auto close dialog to set wifi ap, fixed, cannot stop recording after started
added, wifi ap static mode,

fixed, remove usb broadcastreceiver after destroy main

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,4 +9,8 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="progressBar" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorAccent">@color/colorPrimary</item>
+    </style>
+
 </resources>
