--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -10,6 +10,5 @@
         android:id="@+id/audio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/audio_enable"
-        android:visibility="gone"/>
+        android:text="@string/audio_enable" />
 </RelativeLayout>
